--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cnn",
-  "version": "0.1.1",
+  "name": "cnnBot",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "nodemon bin/www --config ./nodemon.json",
